refactor: Rename app from 'Private Transaction Tracker' to 'Private Expense Tracker'
- Updated app name in all files
- Changed short name from PTT to PET
- Updated HTML title, meta tags, manifest, and i18n strings

--- a/private-ledger-flow/src/i18n/locales/en.json
+++ b/private-ledger-flow/src/i18n/locales/en.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "title": "Private Transaction Tracker",
+    "title": "Private Expense Tracker",
     "subtitle": "Encrypted Expense Dashboard"
   },
   "nav": {
